labs/kubernetes/ingress/specs/whoami/whoami.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-internal
  labels:
<<<<<<< HEAD
    kubernetes.azureauthority.in: ingress
=======
    kubernetes.courselabs.co: ingress
>>>>>>> 294ba0192c4d7be6084b7914be1fecee6edd1552
spec:
  selector:
    app: whoami
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
<<<<<<< HEAD
    kubernetes.azureauthority.in: ingress
=======
    kubernetes.courselabs.co: ingress
>>>>>>> 294ba0192c4d7be6084b7914be1fecee6edd1552
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
        version: v1
    spec:
      containers:
        - name: app
          image: sixeyed/whoami:21.04
