labs/kubernetes/ingress/specs/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  labels:
<<<<<<< HEAD
    kubernetes.azureauthority.in: ingress
=======
    kubernetes.courselabs.co: ingress
>>>>>>> 294ba0192c4d7be6084b7914be1fecee6edd1552
spec:
  rules:
  - host: whoami.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-internal
            port: 
              name: http
